# template_project_cpp

./: .gitignore  CMakeLists.txt  README.md  template_config.yaml
.github/workflows/: test_template_initializer.yaml  tests.yaml  unit_tests.yaml
apps/example_app/: CMakeLists.txt  main.cc
apps/template_project_cpp/: CMakeLists.txt  main.cc
libs/example_lib/: CMakeLists.txt  example_class.cc  example_class.h
libs/template_project_cpp/core/: CMakeLists.txt  example_class.cc  example_class.h
libs/template_project_cpp/ui/: CMakeLists.txt  model.h  ui.cc  ui.h
libs/template_project_cpp/ui/qml/: main_window.qml
libs/ui/: CMakeLists.txt  model.h  ui.cc  ui.h  ui.qrc
libs/ui/qml/: main_window.qml
libs/ui/resources/: origins.csv
scripts/: install_dependencies_arch.sh  install_dependencies_debian_ubuntu.sh
unit_test/: CMakeLists.txt  example_class_test.cc  main.cc
unit_tests/: CMakeLists.txt  example_class_test.cc  main.cc
